[package]
name = "eguitest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
egui_extras = { version = "0.28.1", features = ["default", "image"] }
